hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_reuse_lval_1.php
<?hh

async function f() {
  concurrent {
    await genx($x = 42);
    await genx($x);
  }
}
